--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
 
 install:
   # Setup gradle.properties
-  - cp WordPress/gradle.properties-example WordPress/gradle.properties
+  - cp WordPress/gradle.properties WordPress/gradle.properties
 
 script:
   - ./gradlew -PdisablePreDex assembleVanillaRelease lint || (grep -A20 -B2 'severity="Error"' WordPress/build/outputs/lint-results-vanillaDebug.xml; exit 1)
