--- a/WordPress/build.gradle
+++ b/WordPress/build.gradle
@@ -1,3 +1,11 @@
+
+repositories {
+    jcenter()
+    maven { url 'http://wordpress-mobile.github.io/WordPress-Android' }
+    maven { url 'https://maven.fabric.io/public' }
+    maven { url "https://jitpack.io" }
+}
+
 buildscript {
     repositories {
         jcenter()
@@ -6,15 +14,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.22.0'
     }
-}
-
-repositories {
-    jcenter()
-    maven { url 'http://wordpress-mobile.github.io/WordPress-Android' }
-    maven { url 'https://maven.fabric.io/public' }
-    maven { url "https://jitpack.io" }
 }
 
 apply plugin: 'com.android.application'
@@ -30,7 +31,7 @@ android {
     }
 
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "org.wordpress.android"
@@ -76,12 +77,13 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+    debugCompile project(':sdk')
 
     // Provided by maven central
     compile ('org.wordpress:mediapicker:1.2.4') {
         exclude group:'com.android.support'
     }
-    compile 'com.google.code.gson:gson:2.6.+'
+    compile 'com.google.code.gson:gson:2.6.2'
     compile 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
 
     compile 'com.android.support:support-compat:24.2.1'
@@ -110,7 +112,7 @@ dependencies {
 
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.0'
     androidTestCompile 'org.objenesis:objenesis:2.1'
-    androidTestCompile 'org.mockito:mockito-core:+'
+    androidTestCompile 'org.mockito:mockito-core:2.1.0'
     androidTestCompile 'com.squareup.okhttp:mockwebserver:2.7.5'
 
     // Provided by the WordPress-Android Repository
